# kindle_klipper

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  upload-db.yml
data/: kindle_clippings.db
src/: selector.py
src/kindle_klipper/: cli.py  config.py  database.py  email.py  parser.py  selector.py
src/kindle_klipper.egg-info/: PKG-INFO
tests/: test_basics.py
