[project]
name = "kindle_klipper"
version = "0.1.0"
description = "turn your clippings.txt to a structured database"
readme = "README.md"
requires-python = ">=3.10"


[project.scripts]
kindle_klipper = "kindle_klipper.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
