[project]
name = "kindle_klipper"
version = "0.1.0"
description = "turn your clippings.txt to a structured database"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "pandas",
    "numpy",
    "python-dateutil",
    "six"
]


[project.scripts]
kindle_klipper = "kindle_klipper.cli:main"
kk_random = "kindle_klipper.cli:random_highlight"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"